修改目录结构,反序列化可选择

--- a/modules/swagger-codegen/src/main/resources/python/README.mustache
+++ b/modules/swagger-codegen/src/main/resources/python/README.mustache
@@ -35,8 +35,7 @@ pip install git+https://github.com/{{{gitUserId}}}/{{{gitRepoId}}}.git
 Then import the package:
 ```python
 {{#apiInfo}}{{#apis}}{{#-first}}{{#operations}}{{#operation}}{{#-first}}
-from {{{apiPackage}}} import ApiClient, {{{classname}}}
-from {{{packageName}}}.configuration import Configuration, MarketplaceRegion
+from {{{packageName}}} import {{{classname}}}, ApiClient, Configuration, MarketplaceRegion
 
 refresh_token = "Atzr|xxx"
 role_arn = "arn:aws:iam::00xxxxx:role/xxx"
