--- a/modules/swagger-codegen/src/main/resources/python/configuration.mustache
+++ b/modules/swagger-codegen/src/main/resources/python/configuration.mustache
@@ -84,3 +84,6 @@ class Configuration(object):
 
         # Disable client side validation
         self.client_side_validation = True
+
+        # deserialize response to model
+        self.deserialize = False
