--- a/modules/swagger-codegen/src/main/resources/python/__init__package.mustache
+++ b/modules/swagger-codegen/src/main/resources/python/__init__package.mustache
@@ -5,6 +5,7 @@ from __future__ import absolute_import
 {{#apiInfo}}{{#apis}}from {{apiPackage}}.{{classVarName}} import {{classname}}
 {{/apis}}{{/apiInfo}}
 # import ApiClient
-from {{packageName}}.api_client import ApiClient
+from {{packageName}}.api_client import *
 from {{packageName}}.configuration import *
+from {{packageName}}.rest import *
 # import models into sdk package
